# oxideav-hdr

./: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
benches/: decode.rs  encode.rs  pixels.rs
examples/: gen_fixtures.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: colorconv.rs  decode.rs  encode.rs  headers.rs  pixels.rs  roundtrip.rs
src/: container.rs  decoder.rs  encoder.rs  error.rs  header.rs  image.rs  lib.rs  limits.rs  registry.rs  rgbe.rs  rle.rs  tonemap.rs  xyz.rs
tests/: fixture_decode.rs  gamma.rs  imagemagick_xvalidate.rs  reorient.rs  rgbe_roundtrip_matrix.rs  roundtrip.rs
tests/fixtures/: flat_4x2_uncompressed.hdr  gradient_32x16_crlf_plusY.hdr  gradient_32x16_newrle.hdr  solid_16x8_oldrle.hdr  xyze_24x10_newrle.hdr
